New small features.

--- a/source/index.html
+++ b/source/index.html
@@ -9,7 +9,7 @@
 	<title>Mitoshi CryptoLotto ICO</title>
   <link rel="shortcut icon" href="favicon.ico?v=2" type="image/x-icon">
   <link rel="icon" href="favicon.ico?v=3" type="image/x-icon">
-	<link href="css/style.min.css?v=5" rel="stylesheet">
+	<link href="css/style.min.css?v=6" rel="stylesheet">
 </head>
 <body>
 <div id="buyTokensModal" class="modal">
@@ -102,10 +102,8 @@
               </p>
             </div>
             <div class="mitoshi__button-group">
-              <button class="mitoshi__button mitoshi__button--transparent">Download 1 Pager</button>
-              <a class="mitoshi__button mitoshi__button--gold mitoshi__button--right" href="https://t.me/Mitoshi_Channel" target="_blank">Mitoshi Channel</a>
-              <a class="mitoshi__button mitoshi__button--gold" href="https://t.me/Mitoshi_Crypto" target="_blank">Mitoshi CryptoLotto</a>
-              <a class="mitoshi__button mitoshi__button--gold" href="https://t.me/MitoshiCrypto_CN" target="_blank">Telegram Chinese</a>
+              <a class="mitoshi__button mitoshi__button--transparent" href="files/Fold_Brochure.pdf" target="_blank">Download Brochure</a>
+              <a class="mitoshi__button mitoshi__button--gold mitoshi__button--right" href="https://t.me/Mitoshi_Crypto" target="_blank">Community</a>
             </div>
           </div>
         </section>
@@ -115,8 +113,7 @@
           </h2>
           <div class="about__group">
             <div class="about__video-wrap">
-              <iframe width="560" height="315" src="https://www.youtube.com/embed/wAeGLnxyXuQ?rel=0&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-
+              <iframe width="560" height="315" src="https://www.youtube.com/embed/nxCJ80f2_sU" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
             </div>
             <div class="about__desc">
               <p class="about__text about__text--strong">
@@ -159,11 +156,11 @@
                 </tr>
                 <tr class="sale__table-row">
                   <td class="sale__table-data"><b>Token sale start</b></td>
-                  <td class="sale__table-data sale__table-data--right"></td>
+                  <td class="sale__table-data sale__table-data--right">27 January 2019</td>
                 </tr>
                 <tr class="sale__table-row">
                   <td class="sale__table-data"><b>Token sale end</b></td>
-                  <td class="sale__table-data sale__table-data--right"></td>
+                  <td class="sale__table-data sale__table-data--right">25 August 2019</td>
                 </tr>
                 <tr class="sale__table-row">
                   <td class="sale__table-data"><b>Total amount of tokens</b></td>
@@ -197,11 +194,11 @@
                 <tr class="sale__table-row">
                   <td
                     class="sale__table-data"><b>Accepted crypto & fiat currencies</b></td>
-                  <td class="sale__table-data sale__table-data--right">ETH, BTC, LTC, USD</td>
+                  <td class="sale__table-data sale__table-data--right">ETH, BTC & USD</td>
                 </tr>
                 <tr class="sale__table-row">
                   <td class="sale__table-data"><b>Minimum purchase limit</b></td>
-                  <td class="sale__table-data sale__table-data--right"></td>
+                  <td class="sale__table-data sale__table-data--right">TBA</td>
                 </tr>
               </table>
             </div>
@@ -259,7 +256,6 @@
             </div>
           </div>
           <div class="sale__button-group">
-            <button class="sale__button">Download 1 Pager</button>
             <button class="sale__button">Download White Paper</button>
           </div>
         </section>
@@ -344,7 +340,7 @@
               Furthermore, decentralized technology is a way to work around regulatory policies that inhibit the growth of the lotto industry while making its market much more expandable and involved. Mitoshi CryptoLotto will then be accessible anytime, anywhere with the ease of transaction provided through cryptocurrency via blockchain technology.
             </p>
           </div>
-          <a class="solution__button" href="https://drive.google.com/file/d/17Ch-TQFkza68qy0R9sfg9UWlAOlg3is7/view" target="_blank">
+          <a class="solution__button" href="files/Features.pdf" target="_blank">
             Mitoshi CryptoLotto Features
           </a>
         </section>
@@ -384,7 +380,7 @@
                 </p>
               </li>
             </ul>
-            <a class="how__button" href="https://drive.google.com/file/d/1-STtiw1ShmE6e_686fysjgiuFSd8mNa_/view" target="_blank">
+            <a class="how__button" href="https://bitcointalk.org/index.php?topic=5053501.new#new" target="_blank">
               Rewards & Bounty Terms & Conditions
             </a>
           </div>
@@ -529,7 +525,7 @@
                 </a>
                 <p class="team__member-name">Natthavong Jumchai</p>
                 <p class="team__member-occup">
-                  Business Development, Asia & Australia
+                  Business Development Director
                 </p>
               </li>
               <li class="team__list-item team__list-item--management">
@@ -779,7 +775,7 @@
                 href="http://bitcointalk.org/index.php?topic=5045268.new#new" target="_blank"></a></li>
               <li
                 class="contacts__list-item contacts__list-item--stemit"><a
-                href="#"></a></li>
+                href="https://steemit.com/@mitoshicrypto" target="_blank"></a></li>
             </ul>
           </div>
           <div class="contacts__group">
@@ -787,7 +783,7 @@
             <p class="contacts__text">
               Frequently asked questions on how you can win with Mitoshi.
             </p>
-            <a class="contacts__button" href="https://drive.google.com/file/d/19GrtsLFBZvT2FivCQwAGxWg_-y3UVszf/view" target="_blank">
+            <a class="contacts__button" href="files/FAQS.pdf" target="_blank">
               View FAQS
             </a>
           </div>
@@ -805,12 +801,12 @@
       <div class="footer__wrapper">
         <ul class="footer__list">
           <li class="footer__item footer__item--telegram"><a href="https://t.me/Mitoshi_Channel" target="_blank"></a></li>
-          <li class="footer__item footer__item--whatsapp"><a href="#" target="_blank"></a></li>
+          <li class="footer__item footer__item--whatsapp"><a href="https://chat.whatsapp.com/invite/L0KiJjxsGzwIQRtU6Cq1Yu" target="_blank"></a></li>
           <li class="footer__item footer__item--mail"><a href="mailto:luckyyou@mitoshiworldwide.com" target="_blank"></a></li>
           <li class="footer__item footer__item--facebook"><a href="http://m.facebook.com/MitoshiCryptoLotto/" target="_blank"></a></li>
           <li class="footer__item footer__item--lkdin"><a href="http://www.linkedin.com/company/mitoshi/" target="_blank"></a></li>
           <li class="footer__item footer__item--twitter"><a href="http://mobile.twitter.com/mitoshicrypto" target="_blank"></a></li>
-          <li class="footer__item footer__item--youtube"><a href="https://www.youtube.com/watch?v=nxCJ80f2_sU" target="_blank"></a></li>
+          <li class="footer__item footer__item--youtube"><a href="https://www.youtube.com/channel/UCG2rcEGPN6Q_AQgSN7s_ADA" target="_blank"></a></li>
         </ul>
         <p class="footer__group">
           <span>Mitoshi Worldwide Holdings Ltd. @ 2018</span>
