--- a/source/index.html
+++ b/source/index.html
@@ -134,7 +134,7 @@
               <p class="about__text">
                 Mitoshi will have a widespread lineup of lottery draws. Each draw contains massive payouts for its winners. Mitoshi CryptoLotto will have a global reach, allowing anybody from around the globe to participate by the tap of a finger.
               </p>
-              <a class="about__button" href="#">
+              <a class="about__button" target="_blank" href="files/Draws.pdf">
                 Learn more about Mitoshi Draws
               </a>
             </div>
@@ -256,7 +256,7 @@
             </div>
           </div>
           <div class="sale__button-group">
-            <button class="sale__button">Download White Paper</button>
+            <a href="files/Whitepaper.pdf" target="_blank" class="sale__button">Download White Paper</a>
           </div>
         </section>
         <section class="challenge" id="challenge">
