fixing buy-tokens button

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
               </li>
             </ul>
           </nav>
-          <button class="header__button">Buy tokens</button>
+          <a class="header__button" href="https://investor.mitoshi.io/" target="_blank">Buy tokens</a>
         </div>
       </div>
     </header>
