fixing mitoshi button-right

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
             </div>
             <div class="mitoshi__button-group">
               <a class="mitoshi__button mitoshi__button--transparent" href="files/Fold_Brochure.pdf" target="_blank">Download Brochure</a>
-              <a class="mitoshi__button mitoshi__button--gold mitoshi__button--right" href="https://t.me/Mitoshi_Crypto" target="_blank">Community</a>
+              <a class="mitoshi__button mitoshi__button--gold mitoshi__button--right" href="https://t.me/Mitoshi_Crypto" target="_blank">Join Community</a>
             </div>
           </div>
         </section>
