changing buy tokens button to login and sign up

--- a/index.html
+++ b/index.html
@@ -75,7 +75,10 @@
               </li>
             </ul>
           </nav>
-          <a class="header__button" href="https://investor.mitoshi.io/" target="_blank">Buy tokens</a>
+          <div class="header__buttons-group">
+            <a class="header__button" href="https://investor.mitoshi.io/register" target="_blank">SIGN UP</a>
+            <a class="header__button" href="https://investor.mitoshi.io/login" target="_blank">LOGIN</a>
+          </div>
         </div>
       </div>
     </header>
