--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<title>Mitoshi CryptoLotto ICO</title>
   <link rel="shortcut icon" href="favicon.ico?v=2" type="image/x-icon">
   <link rel="icon" href="favicon.ico?v=3" type="image/x-icon">
-	<link href="css/style.min.css?v=6" rel="stylesheet">
+	<link href="css/style.min.css?v=7" rel="stylesheet">
 </head>
 <body>
 <div id="buyTokensModal" class="modal">
@@ -111,6 +111,73 @@
           </div>
         </section>
         <section class="about" id="about">
+          <ul class="about__rating-list">
+            <li class="about__rating-item">
+              <a href="" class="about__rating-link">
+                <dl>
+                  <dt>
+                    <img src="images/rating/ico-bench.png" alt="ICO-Bench">
+                  </dt>
+                  <dd>
+                    <img src="images/rating/rated-star-40.png" alt="Rating">
+                    <p>3.9</p>
+                  </dd>
+                </dl>
+              </a>
+            </li>
+            <li class="about__rating-item">
+              <a href="" class="about__rating-link">
+                <dl>
+                  <dt>
+                    <img src="images/rating/ico-holder.svg" alt="ICO-Holder">
+                  </dt>
+                  <dd>
+                    <img src="images/rating/rated-star-48.png" alt="Rating">
+                    <p>4.8</p>
+                  </dd>
+                </dl>
+              </a>
+            </li>
+            <li class="about__rating-item">
+              <a href="" class="about__rating-link">
+                <dl>
+                  <dt>
+                    <img src="images/rating/coin-check-up.png" alt="CoinCheckUp">
+                  </dt>
+                  <dd>
+                    <img src="images/rating/rated-star-40.png" alt="Rating">
+                    <p>4.1</p>
+                  </dd>
+                </dl>
+              </a>
+            </li>
+            <li class="about__rating-item">
+              <a href="" class="about__rating-link">
+                <dl>
+                  <dt>
+                    <img src="images/rating/top-token-sales.svg" alt="TopTokenSale">
+                  </dt>
+                  <dd>
+                    <img src="images/rating/rated-star-40.png" alt="Rating">
+                    <p>3</p>
+                  </dd>
+                </dl>
+              </a>
+            </li>
+            <li class="about__rating-item">
+              <a href="" class="about__rating-link">
+                <dl>
+                  <dt>
+                    <img src="images/rating/ico-marks.png" alt="ICOMarks">
+                  </dt>
+                  <dd>
+                    <img src="images/rating/rated-star-85.png" alt="Rating">
+                    <p>8.5</p>
+                  </dd>
+                </dl>
+              </a>
+            </li>
+          </ul>
           <h2 class="about__title">
             About Mitoshi CryptoLotto
           </h2>
