adding sale section with static data

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
         <section class="about" id="about">
           <ul class="about__rating-list">
             <li class="about__rating-item">
-              <a href="" class="about__rating-link">
+              <a href="https://icobench.com/ico/mitoshi" class="about__rating-link">
                 <dl>
                   <dt>
                     <img src="images/rating/ico-bench.png" alt="ICO-Bench">
@@ -126,7 +126,7 @@
               </a>
             </li>
             <li class="about__rating-item">
-              <a href="" class="about__rating-link">
+              <a href="https://icoholder.com/en/mitoshi-27603" class="about__rating-link">
                 <dl>
                   <dt>
                     <img src="images/rating/ico-holder.svg" alt="ICO-Holder">
@@ -139,7 +139,7 @@
               </a>
             </li>
             <li class="about__rating-item">
-              <a href="" class="about__rating-link">
+              <a href="https://ico.coincheckup.com/mitoshi/" class="about__rating-link">
                 <dl>
                   <dt>
                     <img src="images/rating/coin-check-up.png" alt="CoinCheckUp">
@@ -152,20 +152,20 @@
               </a>
             </li>
             <li class="about__rating-item">
-              <a href="" class="about__rating-link">
+              <a href="http://toptokensales.com/?s=Mitoshi" class="about__rating-link">
                 <dl>
                   <dt>
                     <img src="images/rating/top-token-sales.svg" alt="TopTokenSale">
                   </dt>
                   <dd>
                     <img src="images/rating/rated-star-40.png" alt="Rating">
-                    <p>3</p>
+                    <p>3,0</p>
                   </dd>
                 </dl>
               </a>
             </li>
             <li class="about__rating-item">
-              <a href="" class="about__rating-link">
+              <a href="https://icomarks.com/search?q=Mitoshi" class="about__rating-link">
                 <dl>
                   <dt>
                     <img src="images/rating/ico-marks.png" alt="ICOMarks">
@@ -178,6 +178,35 @@
               </a>
             </li>
           </ul>
+          <div class="about__sale">
+            <h3 class="about__sale-title">
+              Pre-Sale Live
+            </h3>
+            <p class="about__sale-status">
+              Sales Status:
+              <span class="about__sale-hardcap">999</span>
+              USD
+            </p>
+            <ul class="about__sale-list">
+              <li class="about__sale-item">
+                <img class="about__sale-icon" src="images/sale/btc.svg" alt="BTC">
+                <p>
+                  1 BTC =
+                  <span class="about__sale-btc">2</span>
+                </p>
+                <a class="about__join-link" href="https://investor.mitoshi.io/login" target="_blank">Join Now</a>
+              </li>
+              <li class="about__sale-item">
+                <img class="about__sale-icon" src="images/sale/eth.svg" alt="ETH">
+                <p>
+                  1 ETH = <span class="about__sale-eth">3</span>
+                </p>
+                <p>
+                  <a class="about__join-link" href="https://investor.mitoshi.io/login" target="_blank">Join Now</a>
+                </p>
+              </li>
+            </ul>
+          </div>
           <h2 class="about__title">
             About Mitoshi CryptoLotto
           </h2>
