adding mitoshi play link

--- a/index.html
+++ b/index.html
@@ -243,9 +243,14 @@
               <p class="about__text">
                 Mitoshi will have a widespread lineup of lottery draws. Each draw contains massive payouts for its winners. Mitoshi CryptoLotto will have a global reach, allowing anybody from around the globe to participate by the tap of a finger.
               </p>
-              <a class="about__button" target="_blank" href="files/Draws.pdf">
-                Learn more about Mitoshi Draws
-              </a>
+              <div class="about__buttons-group">
+                <a class="about__button" target="_blank" href="files/Draws.pdf">
+                  Learn more about Draws
+                </a>
+                <a class="about__button" target="_blank" href="https://www.playmitoshi.com">
+                  Play Mitoshi
+                </a>
+              </div>
             </div>
           </div>
         </section>
