adding smart contract audit buttons

--- a/index.html
+++ b/index.html
@@ -369,8 +369,10 @@
               </div>
             </div>
           </div>
-          <div class="sale__button-group">
+          <div class="sale__buttons-group">
             <a href="files/Whitepaper.pdf" target="_blank" class="sale__button">Download White Paper</a>
+            <a href="#" target="_blank" class="sale__button">Smart Contract Audit 1</a>
+            <a href="#" target="_blank" class="sale__button">Smart Contract Audit 2</a>
           </div>
         </section>
         <section class="challenge" id="challenge">
