--- a/index.html
+++ b/index.html
@@ -10,6 +10,25 @@
   <link rel="shortcut icon" href="favicon.ico?v=2" type="image/x-icon">
   <link rel="icon" href="favicon.ico?v=3" type="image/x-icon">
 	<link href="css/style.min.css?v=7" rel="stylesheet">
+  <!--<style>-->
+    <!--.wrap {-->
+      <!--width: 50%;-->
+    <!--}-->
+    <!--.wrapper {-->
+      <!--position: relative;-->
+      <!--padding-bottom: 56.25%; /* 16:9 */-->
+      <!--padding-top: 25px;-->
+      <!--height: 0;-->
+    <!--}-->
+
+    <!--.wrapper iframe {-->
+      <!--position: absolute;-->
+      <!--top: 0;-->
+      <!--left: 0;-->
+      <!--width: 100%;-->
+      <!--height: 100%;-->
+    <!--}-->
+  <!--</style>-->
 </head>
 <body>
 <div id="buyTokensModal" class="modal">
@@ -913,7 +932,12 @@
             </p>
           </div>
         </section>
-      </div>
+        <!--<div class="wrap">-->
+          <!--<div class="wrapper">-->
+            <!--<iframe width="560" height="349" src="https://www.youtube.com/embed/nxCJ80f2_sU" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>-->
+          <!--</div>-->
+        <!--</div>-->
+      <!--</div>-->
     </main>
     <footer class="footer">
       <div class="footer__wrapper">
