changing team section

--- a/index.html
+++ b/index.html
@@ -611,8 +611,9 @@
           </h2>
           <div class="team__block">
             <h4 class="team__subtitle">
-              Executive
-              <span>team</span>
+              Executive &
+              <span>Management</span>
+              <span>Team</span>
             </h4>
             <ul class="team__list team__list--executive">
               <li class="team__list-item team__list-item--executive">
@@ -629,38 +630,16 @@
                 <p class="team__member-name">Norman Velasco</p>
                 <p class="team__member-occup">COO & Co-Founder</p>
               </li>
-            </ul>
-          </div>
-          <div class="team__block">
-            <h4 class="team__subtitle">
-              Management
-              <span>team</span>
-            </h4>
-            <ul class="team__list team__list--management">
-              <li class="team__list-item team__list-item--management">
-                <a class="team__img-wrap" href="https://www.linkedin.com/in/nikita-melnikov-a71a06b8/" target="_blank">
-                  <img src="images/team-3.png" alt="Member of Mithoshi Team">
-                </a>
-                <p class="team__member-name">Nikita Melnikov</p>
-                <p class="team__member-occup">Blockchain & Smart Contract Advisor</p>
-              </li>
-              <li class="team__list-item team__list-item--management">
-                <a class="team__img-wrap" href="https://www.linkedin.com/in/kim-zafra-el-jugador-53393037/" target="_blank">
-                  <img src="images/team-4.png" alt="Member of Mithoshi Team">
-                </a>
-                <p class="team__member-name">Kim Zafra</p>
-                <p class="team__member-occup">Technical Game Advisor / Game Mathematecian</p>
-              </li>
-              <li class="team__list-item team__list-item--management">
+              <li class="team__list-item team__list-item--executive">
                 <a class="team__img-wrap" href="https://www.linkedin.com/in/rob-natthavong-jumchai-1a4067172/" target="_blank">
                   <img src="images/team-5.png" alt="Member of Mithoshi Team">
                 </a>
-                <p class="team__member-name">Natthavong Jumchai</p>
+                <p class="team__member-name">Robert Natthavong Jumchai</p>
                 <p class="team__member-occup">
-                  Business Development Director
+                  Chief Business Development Officer
                 </p>
               </li>
-              <li class="team__list-item team__list-item--management">
+              <li class="team__list-item team__list-item--executive">
                 <a class="team__img-wrap" href="#" target="_blank">
                   <img src="images/team-6.png" alt="Member of Mithoshi Team">
                 </a>
@@ -724,11 +703,11 @@
             </h4>
             <ul class="team__list team__list--pr">
               <!--<li class="team__list-item team__list-item&#45;&#45;pr">-->
-                <!--<a class="team__img-wrap" href="https://www.linkedin.com/in/juri-verbitski-90967584/" target="_blank">-->
-                  <!--<img src="images/team-13.png" alt="Member of Mithoshi Team">-->
-                <!--</a>-->
-                <!--<p class="team__member-name">Juri Verbitski</p>-->
-                <!--<p class="team__member-occup">PR & Digital Marketing</p>-->
+              <!--<a class="team__img-wrap" href="https://www.linkedin.com/in/juri-verbitski-90967584/" target="_blank">-->
+              <!--<img src="images/team-13.png" alt="Member of Mithoshi Team">-->
+              <!--</a>-->
+              <!--<p class="team__member-name">Juri Verbitski</p>-->
+              <!--<p class="team__member-occup">PR & Digital Marketing</p>-->
               <!--</li>-->
               <li class="team__list-item team__list-item--pr">
                 <a class="team__img-wrap" href="https://www.linkedin.com/in/jerickalcancia/" target="_blank">
@@ -738,11 +717,11 @@
                 <p class="team__member-occup">Motion Graphic Artist</p>
               </li>
               <!--<li class="team__list-item team__list-item&#45;&#45;pr">-->
-                <!--<a class="team__img-wrap" href="https://www.linkedin.com/in/randy-pagatpatan-b773a388/" target="_blank">-->
-                  <!--<img src="images/team-15.jpg" alt="Member of Mithoshi Team">-->
-                <!--</a>-->
-                <!--<p class="team__member-name">Randy Pagatpatan</p>-->
-                <!--<p class="team__member-occup">Graphic Design</p>-->
+              <!--<a class="team__img-wrap" href="https://www.linkedin.com/in/randy-pagatpatan-b773a388/" target="_blank">-->
+              <!--<img src="images/team-15.jpg" alt="Member of Mithoshi Team">-->
+              <!--</a>-->
+              <!--<p class="team__member-name">Randy Pagatpatan</p>-->
+              <!--<p class="team__member-occup">Graphic Design</p>-->
               <!--</li>-->
               <li class="team__list-item team__list-item--pr">
                 <a class="team__img-wrap" href="https://www.linkedin.com/in/rmcccos/" target="_blank">
@@ -753,11 +732,33 @@
               </li>
             </ul>
           </div>
+          <!--<div class="team__block">-->
+            <!--<h4 class="team__subtitle">-->
+              <!--Management-->
+              <!--<span>team</span>-->
+            <!--</h4>-->
+            <!--<ul class="team__list team__list&#45;&#45;management">-->
+              <!--<li class="team__list-item team__list-item&#45;&#45;management">-->
+                <!--<a class="team__img-wrap" href="https://www.linkedin.com/in/nikita-melnikov-a71a06b8/" target="_blank">-->
+                  <!--<img src="images/team-3.png" alt="Member of Mithoshi Team">-->
+                <!--</a>-->
+                <!--<p class="team__member-name">Nikita Melnikov</p>-->
+                <!--<p class="team__member-occup">Blockchain & Smart Contract Advisor</p>-->
+              <!--</li>-->
+              <!--<li class="team__list-item team__list-item&#45;&#45;management">-->
+                <!--<a class="team__img-wrap" href="https://www.linkedin.com/in/kim-zafra-el-jugador-53393037/" target="_blank">-->
+                  <!--<img src="images/team-4.png" alt="Member of Mithoshi Team">-->
+                <!--</a>-->
+                <!--<p class="team__member-name">Kim Zafra</p>-->
+                <!--<p class="team__member-occup">Technical Game Advisor / Game Mathematecian</p>-->
+              <!--</li>-->
+            <!--</ul>-->
+          <!--</div>-->
           <div class="team__block">
             <h4 class="team__subtitle">
-              Community &
+              Community,
               <span>Social Media</span>
-              <span>Management</span>
+              <span> and Bounty Management</span>
             </h4>
             <ul class="team__list team__list--media">
               <li class="team__list-item team__list-item--media">
@@ -788,19 +789,19 @@
                 <p class="team__member-name">Chen Chee Fah</p>
                 <p class="team__member-occup">Community Management (Mandarin)</p>
               </li>
-              <!--<li class="team__list-item team__list-item&#45;&#45;media">-->
-                <!--<a class="team__img-wrap" href="https://www.linkedin.com/in/gracious-grace-06b5a716b/" target="_blank">-->
-                  <!--<img src="images/team-21.png" alt="Member of Mithoshi Team">-->
-                <!--</a>-->
-                <!--<p class="team__member-name">Gracious Ezendu</p>-->
-                <!--<p class="team__member-occup">Community Management</p>-->
-              <!--</li>-->
               <li class="team__list-item team__list-item--media">
                 <a class="team__img-wrap" href="https://www.linkedin.com/in/awele-kimberly-ajiduah-8981a075/" target="_blank">
                   <img src="images/team-22.png" alt="Member of Mithoshi Team">
                 </a>
                 <p class="team__member-name">Awele Kimberly Ajiduah</p>
                 <p class="team__member-occup">Content Management</p>
+              </li>
+              <li class="team__list-item team__list-item--media">
+                <a class="team__img-wrap" href="https://www.linkedin.com/in/hazel-olivar-58ba23133/" target="_blank">
+                  <img src="images/team-24.png" alt="Member of Mithoshi Team">
+                </a>
+                <p class="team__member-name">Hazel Olivar</p>
+                <p class="team__member-occup">Community Management</p>
               </li>
               <li class="team__list-item team__list-item--media">
                 <a class="team__img-wrap" href="https://www.linkedin.com/in/philip-smart-43898b169/" target="_blank">
@@ -810,20 +811,41 @@
                 <p class="team__member-occup">Community Management</p>
               </li>
               <li class="team__list-item team__list-item--media">
-                <a class="team__img-wrap" href="https://www.linkedin.com/in/hazel-olivar-58ba23133/" target="_blank">
-                  <img src="images/team-24.png" alt="Member of Mithoshi Team">
+                <a class="team__img-wrap" href=https://www.linkedin.com/in/kris-manalo-793173175/" target="_blank">
+                  <img src="images/team-27.jpg" alt="Member of Mithoshi Team">
                 </a>
-                <p class="team__member-name">Hazel Olivar</p>
+                <p class="team__member-name">Kris Manalo</p>
+                <p class="team__member-occup">Community Management</p>
+              </li>
+              <li class="team__list-item team__list-item--media">
+                <a class="team__img-wrap" href=https://www.linkedin.com/in/geneva-padua-b93646b1/" target="_blank">
+                  <img src="images/team-28.jpg" alt="Member of Mithoshi Team">
+                </a>
+                <p class="team__member-name">Geneva Padua</p>
                 <p class="team__member-occup">Community Management</p>
               </li>
             </ul>
           </div>
 
-          <!--<div class="team__block">-->
-            <!--<h4 class="team__subtitle">-->
-              <!--Advisors-->
-            <!--</h4>-->
-            <!--<ul class="team__list team__list&#45;&#45;advisors">-->
+          <div class="team__block">
+            <h4 class="team__subtitle">
+              Advisors
+            </h4>
+            <ul class="team__list team__list--advisors">
+              <li class="team__list-item team__list-item--advisors">
+                <a class="team__img-wrap" href="https://www.linkedin.com/in/nikita-melnikov-a71a06b8/" target="_blank">
+                  <img src="images/team-3.png" alt="Member of Mithoshi Team">
+                </a>
+                <p class="team__member-name">Nikita Melnikov</p>
+                <p class="team__member-occup">Blockchain & Smart Contract Advisor</p>
+              </li>
+              <li class="team__list-item team__list-item--advisors">
+                <a class="team__img-wrap" href="https://www.linkedin.com/in/kim-zafra-el-jugador-53393037/" target="_blank">
+                  <img src="images/team-4.png" alt="Member of Mithoshi Team">
+                </a>
+                <p class="team__member-name">Kim Zafra</p>
+                <p class="team__member-occup">Technical Game Advisor / Game Mathematecian</p>
+              </li>
               <!--<li class="team__list-item team__list-item&#45;&#45;advisors">-->
                 <!--<a class="team__img-wrap" href="https://www.linkedin.com/in/simon-cocking-20540135/" target="_blank">-->
                   <!--<img src="images/team-25.png" alt="Member of Mithoshi Team">-->
@@ -852,8 +874,8 @@
                 <!--<p class="team__member-name">-</p>-->
                 <!--<p class="team__member-occup">Advisor [IT & IT Security]</p>-->
               <!--</li>-->
-            <!--</ul>-->
-          <!--</div>-->
+            </ul>
+          </div>
 
           <div class="team__block">
             <h4 class="team__subtitle">
